--- a/hs_core/templates/search/search.html
+++ b/hs_core/templates/search/search.html
@@ -13,25 +13,31 @@
                         {{ form.as_table }}
                         <tr>
                             <td>&nbsp;</td>
-                            <td><input type="submit" value="Search"></td>
+                            <td><input id="faceted-search" type="submit" value="Search"></td>
                         </tr>
                     </tbody>
                 </table>
             </form>
-            {% for key, value in facets.fields.items %}
-                <div class="panel-group">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#{{ key }}">Filter By {{ key }}</a>
-                        </h4>
-                        </div>
-                        <div id="{{ key }}" class="panel-collapse collapse in">
-                            <ul class="list-group">
-                            {% for item in value %}
-                                <li class="list-group-item">
-                                    <input id="{{ item.0 }}" type="checkbox" onchange='window.location.assign("{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}")' class="pull-left"> &nbsp;&nbsp; {{ item.0 }} 
-                                    <span class="label label-default label-pill pull-right"
+            {% for key, values in facets.fields.items %}
+                {% if values %}
+                    <div class="panel-group">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" href="#{{ key }}">Filter By {{ key }}</a>
+                            </h4>
+                            </div>
+                            <div id="{{ key }}"
+                                 {% if key == 'author' or key == 'subjects' or key == 'resource_type'%}
+                                    class="panel-collapse collapse in"
+                                 {% else %}
+                                    class="panel-collapse collapse"
+                                 {% endif %}>
+                                <ul class="list-group">
+                                {% for item in values %}
+                                    <li class="list-group-item">
+                                        <input class="faceted-selections" id="{{ item.0 }}" value="{{ key }},{{ item.0 }}" type="checkbox" class="pull-left"> &nbsp;&nbsp; {{ item.0 }}
+                                        <span class="label label-default label-pill pull-right"
                                             {% if item.1 < 5 %}
                                                 style="background-color:#3333FF" class="badge"
                                             {% elif item.1 >= 5 and item.1 < 10 %}
@@ -39,15 +45,15 @@
                                             {% elif item.1 >= 10 %}
                                                 style="background-color:#FF0000" class="badge"
                                             {% endif %}>{{ item.1 }}
-                                    </span>
-
-                                    {#<a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>#}
-                                </li>
-                            {% endfor %}
-                            </ul>
+                                        </span>
+                                        {#<a href="{{ request.get_full_path }}&amp;selected_facets={{ key }}_exact:{{ item.0|urlencode }}">{{ item.0 }}</a>#}
+                                    </li>
+                                {% endfor %}
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
+                {% endif %}
             {% endfor %}
 
         </div>
@@ -81,4 +87,51 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+
+{% block extra_js %}
+    <script type="text/javascript">
+     $(document).ready(function () {
+        $(function () {
+            $(".faceted-selections").click(function () {
+                console.log($(this).val());
+                var tokens = $(this).val().split(",");
+                var key = tokens[0];
+                var value = tokens[1];
+                var requestURL = "{{ request.get_full_path }}"
+                if($(this).is(":checked")) {
+                    window.location = requestURL + "&selected_facets="+key+"_exact:"+value;
+                    //console.log(solr);
+                    localStorage[$(this).attr("id")] = this.checked;
+                }else{
+                    localStorage.removeItem($(this).attr("id"));
+                    var textSearch = $("#id_q").val();
+                    console.log(textSearch);
+                    var updateURL = "/search/?q=" + textSearch;
+                     $(".faceted-selections").each(function () {
+                         var val = localStorage[$(this).attr("id")];
+                         var isChecked = val !== undefined ? val == "true" : false;
+                         if(isChecked){
+                             var arr = $(this).val().split(",");
+                             var key = arr[0];
+                             var value = arr[1];
+                             updateURL += "&selected_facets="+key+"_exact:"+value;
+                         }
+                     });
+                    window.location = updateURL;
+                }
+            });
+            $(".faceted-selections").each(function () {
+                var val = localStorage[$(this).attr("id")];
+                var isChecked = val !== undefined ? val == "true" : false;
+                $(this).prop("checked", isChecked);
+            });
+        });
+        $("#faceted-search").click(function(){
+            //localStorage = [];
+            window.localStorage.clear();
+        });
+    });
+    </script>
 {% endblock %}
