--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1475,6 +1475,8 @@ body > .container{
     display: inline-block;
     float: left;
 	background:#EEE;
+	border: 1px solid #cccccc;
+  	border-radius: 0px;
 }
 
 #citation-text a, .rights-url a{
