[#502] fix GetSites() bugs against cuahsi 1_1 and 1_2; some cleanups

--- a/ref_ts/templates/pages/create-ref-time-series.html
+++ b/ref_ts/templates/pages/create-ref-time-series.html
@@ -228,8 +228,7 @@
 
             function get_variables(site){
                 $('#loading-2').show();
-                var n = site.indexOf(':'),
-                        site_code = site.substr(n+2);
+                site_code = site
                 var url = globurl;
 
                 var b = $('#submit');
