used relative recaptcha url

--- a/theme/templates/accounts/_signup_form.html
+++ b/theme/templates/accounts/_signup_form.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+<script type="text/javascript" src="//www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
 <script type="text/javascript">
     $(function() {
         function cb() {
