--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2119,6 +2119,14 @@ button.loading {
     float: left;
 }
 
+.profile-info-wrapper {
+	padding-top: 10px;
+}
+
+.profile-header {
+	margin: 40px 0;
+}
+
 #btn-edit-profile {
     border: 1px solid #adadad;
     border-radius: 3px;
@@ -2200,7 +2208,7 @@ div.affiliation {
 .activity-block {
     margin-right: 0;
     margin-left: 0;
-	color: #757575;
+	color: #555;
 }
 
 #overview .activity-block {
@@ -2215,12 +2223,26 @@ div.affiliation {
     margin-bottom: 5px;
 }
 
+.activity-info > span.title {
+	font-size: 16px;
+}
+
+.metadata-wrapper {
+	margin-left: 50px;
+	margin-bottom: 5px;
+}
+
+.metadata-wrapper > h5 {
+	margin: 2px 0;
+}
+
 .activity-description {
     float: left;
     border-left: 3px solid #CCC;
     max-height: 50px;
     overflow: hidden;
     margin-bottom: 5px;
+	margin-top: 10px;
 }
 
 .contribution .activity-description {
@@ -2266,6 +2288,10 @@ table.overview tr > td:first-child {
     background-color: #FFF;
 }
 
+.icon-resource-type > span {
+	color: #757575;
+}
+
 .icon-resource-type, .contribution {
     box-shadow: 1px 1px 5px #E8E8E8;
     -moz-box-shadow: 1px 1px 5px #E8E8E8;
@@ -2308,4 +2334,40 @@ table.overview tr > td:first-child {
 h4.title {
     border-bottom: 1px solid #ddd;
     padding-bottom: 7px;
+}
+
+#badge-generic .badge {
+	background-color:#1f77b4;
+}
+
+#badge-geographic .badge {
+	background-color:#ff7f0e;
+}
+
+#badge-his .badge {
+	background-color:#2ca02c;
+}
+
+#badge-model-program .badge {
+	background-color:#d62728;
+}
+
+#badge-model-instance .badge {
+	background-color:#9467bd;
+}
+
+#badge-swat .badge {
+	background-color:#8c564b;
+}
+
+#badge-multidimensional .badge {
+	background-color:#e377c2;
+}
+
+#badge-time-series .badge {
+	background-color:#17becf;
+}
+
+#badge-geographic-feature .badge {
+	background-color:#bcbd22;
 }
