--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -6,7 +6,7 @@
 {% block main %}
     {% with profile_user.userprofile as profile %}
 
-        <div class="row" style="padding: 40px 0;">
+        <div class="row profile-header">
             {% if profile_user.id == user.id %}
                 <div class="col-xs-12 col-sm-2 pull-right">
                     <a id="btn-edit-profile" data-toggle="tooltip" data-placement="auto"
@@ -25,7 +25,7 @@
                     <div class="profile-pic round-image user-icon pull-left"></div>
                 {% endif %}
 
-                <div style="padding-top:10px;">
+                <div class="profile-info-wrapper">
                     {% if profile_user.first_name or profile_user.last_name %}
                         <h2>{{ profile_user.first_name }} {{ profile_user.last_name }}</h2>
                     {% else %}
@@ -94,27 +94,30 @@
                                         {% if forloop.counter0 < 5 %}
                                         <div class="activity-block">
                                             {% if profile.picture and profile.picture.url %}
-                                                <div style="background-image: url('{{ profile.picture.url }}'); float:left;"
-                                                     class="profile-pic-thumbnail round-image">
+                                                <div style="background-image: url('{{ profile.picture.url }}');"
+                                                     class="profile-pic-thumbnail round-image pull-left">
                                                 </div>
                                             {% else %}
                                                 <div class="profile-pic-thumbnail round-image user-icon"></div>
                                             {% endif %}
 
-                                            {% if profile_user.first_name or profile_user.last_name %}
-                                                <strong>{{ profile_user.first_name }} {{ profile_user.last_name }}</strong>
-                                            {% else %}
-                                                <strong>{{ profile_user.username }}</strong>
-                                            {% endif %}
+                                            <div class="metadata-wrapper">
+                                                <div class="shared-resource-info">
+                                                    {% if profile_user.first_name or profile_user.last_name %}
+                                                        <strong>{{ profile_user.first_name }} {{ profile_user.last_name }}</strong>
+                                                    {% else %}
+                                                        <strong>{{ profile_user.username }}</strong>
+                                                    {% endif %}
 
-                                            <span class="text-muted"> shared </span>
-                                            <span><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
-                                            <h5 style="margin:0 50px;">Resource type: {{ res|resource_type }}</h5>
-                                            <h5 style="margin:0 50px;margin-bottom:15px;">Date: {{ res.created }}</h5>
+                                                    <span class="text-muted"> shared </span>
+                                                    <span><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
+                                                </div>
+                                                <h5><span class="text-muted">Resource type: </span>{{ res|resource_type }}</h5>
+                                                <h5><span class="text-muted">Date: </span>{{ res.created }}</h5>
+                                            </div>
 
                                             {% if res.metadata.description %}
-                                                <div class="activity-description col-sm-12"
-                                                        {% if profile.picture and profile.picture.url %}style="margin-left:15px;" {% endif %}>
+                                                <div class="activity-description col-sm-12">
                                                     <p class="description">
                                                         <strong>ABSTRACT: </strong>{{ res.metadata.description|linebreaks }}
                                                     </p>
@@ -140,7 +143,7 @@
                                 <div class="panel-heading">
                                     <h3 class="panel-title"><span class="glyphicon glyphicon-user">&nbsp;</span>About {{ profile_user.first_name }}</h3>
                                 </div>
-                                <div class="panel-body" style="color:#757575;">
+                                <div class="panel-body">
                                     {{ profile.details }}
                                 </div>
                             </div>
@@ -260,39 +263,39 @@
                                     </tr>
                                     <tr id="badge-generic" data-type="type-Generic">
                                         <td><span>Generic</span></td>
-                                        <td><span style="background-color:#1f77b4" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-geographic" data-type="type-Geographic Raster">
                                         <td><span>Geographic Raster</span></td>
-                                        <td><span style="background-color:#ff7f0e" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-his" data-type="type-HIS Referenced Time Series">
                                         <td><span>HIS Referenced Time Series</span></td>
-                                        <td><span style="background-color:#2ca02c" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-model-program" data-type="type-Model Program Resource">
                                         <td><span>Model Program</span></td>
-                                        <td><span style="background-color:#d62728" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-model-instance" data-type="type-Model Instance Resource">
                                         <td><span>Model Instance</span></td>
-                                        <td><span style="background-color:#9467bd" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-swat" data-type="type-SWAT Model Instance Resource">
                                         <td><span>SWAT Model Instance</span></td>
-                                        <td><span style="background-color:#8c564b" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-multidimensional" data-type="type-Multidimensional (NetCDF)">
                                         <td><span>Multidomensional (NetCDF)</span></td>
-                                        <td><span style="background-color:#e377c2" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-time-series" data-type="type-Time Series">
                                         <td><span>Time Series</span></td>
-                                        <td><span style="background-color:#17becf" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
                                     <tr id="badge-geographic-feature" data-type="type-Geographic Feature (ESRI Shapefiles)">
                                         <td><span>Geographic Feature</span></td>
-                                        <td><span style="background-color:#bcbd22" class="badge">0</span></td>
+                                        <td><span class="badge">0</span></td>
                                     </tr>
 
                                 </tbody>
@@ -315,14 +318,14 @@
                                                 {% elif  res|resource_type == "Time Series" %}style="color:#17becf"
                                                 {% elif  res|resource_type == "Geographic Feature (ESRI Shapefiles)" %}style="color:#bcbd22"
                                                 {% endif %}></i>
-                                        <span class="text-muted"><strong>{{ res|resource_type }}</strong></span>
+                                        <span><strong>{{ res|resource_type }}</strong></span>
                                     </span>
                                     </div>
                                     <div class="activity-block row">
                                         <div class="activity-info col-sm-12">
-                                            <span style="font-size:16px;"><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
-                                            <h5 style="margin:0; color:#757575;">Created: {{ res.created }}</h5>
-                                            <h5 style="margin:0; color:#757575;">Authors:
+                                            <span class="title"><a href="{{ res.get_absolute_url }}">{{ res.metadata.title }}</a></span>
+                                            <h5><span class="text-muted">Created: </span>{{ res.created }}</h5>
+                                            <h5><span class="text-muted">Authors: </span>
                                                 {% for creator in res.metadata.creators.all %}
                                                     {% if forloop.counter0 != 0 %}<span> · </span>{% endif %}
                                                     {% if creator.description %}
