--- a/hs_model_program/static/css/model_program.css
+++ b/hs_model_program/static/css/model_program.css
@@ -1,52 +1,51 @@
 
-.mpElement{
+.mpElement {
     font-weight: bold;
-    padding: 2px 2px 2px 2px;
+    padding: 2px;
 }
 
 a.mpElement::after {
-    display:block;
-    /*content:attr(title);*/
-    font-weight:bold;
-    height:2px;
-    color:transparent;
-    overflow:hidden;
-    visibility:hidden;
+    display: block;
+    font-weight: bold;
+    height: 2px;
+    color: transparent;
+    overflow: hidden;
+    visibility: hidden;
 }
 
 div#mp.row {
-    padding: 5px 0px 5px 0px
+    padding: 5px 0
 }
 
-option:checked{
+option:checked {
     background: #0073ea;
 }
-table{
+table {
     padding: 2px;
-    width:100%;
+    width: 100%;
 }
 
-#div_section_table{
+#div_section_table {
     padding-top: 5px;
     padding-bottom: 5px;
     width: 100%;
 }
-#section_table{
+#section_table {
     width: 50%;
 }
 
-.div-multi-select{
-    max-width:400px;
+.div-multi-select {
+    max-width: 400px;
 }
-.btn-group{
+.btn-group {
     width: 100%;
 }
-.multiselect{
+.multiselect {
     width: 100%;
     text-align: right;
 }
-.input-sm{
-    max-width:550px;
+.input-sm {
+    max-width: 550px;
 }
 
 /* Activate multi-line list elements in the droplist.
