--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -2059,7 +2059,7 @@
                                             <option value="isHostedBy">Hosted By</option>
                                             <option value="isCopiedFrom">Copied From</option>
                                             <option value="isPartOf">Part Of</option>
-                                            <option value="isExecuteddBy">Executed By</option>
+                                            <option value="isExecutedBy">Executed By</option>
                                             <option value="isCreatedBy">Created By</option>
                                             <option value="isVersionOf">Version Of</option>
                                             <option value="isDataFor">Data For</option>
