--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1473,11 +1473,12 @@ body > .container{
 
 #citation-text {
     display: inline-block;
-    width:100%;
+    width: 100%;
     min-height: 30px;
-    background:#EEE;
+    background: #EEE;
 	border: 1px solid #cccccc;
   	border-radius: 0px;
+    padding: 4px;
 }
 
 #citation-text a, .rights-url a{
